src/test/ui/codemap_tests/empty_span.stderr
error[E0321]: cross-crate traits with a default impl, like `std::marker::Send`, can only be implemented for a struct/enum type, not `&'static main::Foo`
  --> $DIR/empty_span.rs:17:5
   |
17 |     unsafe impl Send for &'static Foo { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

